# mocking

./: .dir-locals.el  .gitignore  CMakeLists.txt  mocking.hpp  talk_outline.org  tokenizer1.hpp  tokenizer1_gtest.cpp  tokenizer1_test1.cpp  tokenizer1_test2.cpp  tokenizer2.hpp  tokenizer2_test1.cpp  tokenizer2_test2.cpp  unique_tokenizer.hpp  unique_tokenizer_test.cpp
